[project]
name = "multi-agent-ai-research-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-mistralai>=1.1.4",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
]
